# elite-viz

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/crates/finviz-api/: Cargo.toml
backend/crates/finviz-api/src/: auth.rs  error.rs  main.rs  providers.rs
backend/crates/finviz-api/src/routes/: alerts.rs  auth.rs  backtest.rs  boards.rs  etf.rs  export.rs  groups.rs  indicators.rs  market_data.rs  mod.rs  news.rs  options.rs  patterns.rs  portfolio.rs  saved_screens.rs  screener.rs  settings.rs  watchlists.rs  ws.rs
backend/crates/finviz-auth/: Cargo.toml
backend/crates/finviz-auth/src/: lib.rs
backend/crates/finviz-backtest/: Cargo.toml
backend/crates/finviz-backtest/src/: lib.rs
backend/crates/finviz-core/: Cargo.toml
backend/crates/finviz-core/src/: boards.rs  config.rs  derivatives.rs  lib.rs  news.rs  seed.rs  state.rs
backend/crates/finviz-db/: Cargo.toml
backend/crates/finviz-db/migrations/: 0001_init.sql  0002_extended_metrics.sql
backend/crates/finviz-db/src/: lib.rs  pg.rs
backend/crates/finviz-patterns/: Cargo.toml
backend/crates/finviz-patterns/src/: lib.rs
backend/crates/finviz-screener/: Cargo.toml
backend/crates/finviz-screener/src/: ast.rs  error.rs  eval.rs  lexer.rs  lib.rs  parser.rs  sql.rs  value.rs
backend/crates/finviz-types/: Cargo.toml
backend/crates/finviz-types/src/: lib.rs
docs/: FINVIZ_ELITE_RUST_COMPLETE.md  FINVIZ_FEATURE_REFERENCE.md  GAP_ANALYSIS_AND_PLAN.md  GO_LIVE.md
src/: app.css  app.d.ts
src/lib/: api.ts  auth.svelte.ts  format.ts  token.ts  types.ts
src/lib/components/: Chart.svelte  QueryBar.svelte  ResultsTable.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/alerts/: +page.svelte  +page.ts
src/routes/backtest/: +page.svelte  +page.ts
src/routes/etf/: +page.svelte  +page.ts
src/routes/groups/: +page.svelte  +page.ts
src/routes/login/: +page.svelte
src/routes/map/: +page.svelte  +page.ts
src/routes/markets/: +page.svelte  +page.ts
src/routes/news/: +page.svelte  +page.ts
src/routes/portfolio/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte  +page.ts
src/routes/watchlists/: +page.svelte  +page.ts
(+5 files in other folders)
