[workspace]
resolver = "2"
members = [
    "crates/finviz-types",
    "crates/finviz-screener",
    "crates/finviz-core",
    "crates/finviz-db",
    "crates/finviz-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# internal
finviz-types = { path = "crates/finviz-types" }
finviz-screener = { path = "crates/finviz-screener" }
finviz-core = { path = "crates/finviz-core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
