[package]
name = "finviz-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "finviz-api"
path = "src/main.rs"

[dependencies]
finviz-types.workspace = true
finviz-patterns.workspace = true
finviz-core.workspace = true
finviz-backtest.workspace = true
finviz-screener.workspace = true
finviz-auth.workspace = true
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
